--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -21,12 +23,22 @@
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
-      <span class="header">Tweeter</span>
+      <img class="logo" src="/images/Toronto_Maple_Leafs.png" width="80px" height="80px">
+      <span class="header">~ Leafer</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="spacer">.</section>
+      <section class="new-tweet">
+      <h2 class="composeTitle">Compose Leaf</h2>
+      <form method="POST" action="/tweets" class="submitForm">
+      <div><textarea name="text" type="text" class="tweetText" id="countstroke"
+          placeholder="What are you humming about?"></textarea></div>
+        <button class="button" style="vertical-align:middle" type="submit" value="Tweet"><span>Send </span></button>
+        <span class="counter" id="count">140</span>
+      </form>
+    </section>
     </main>
 
   </body>
