refactored conitional in app.js to not allow tweets over 140 char

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.6/jquery.timeago.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 </head>
 
