added icons on hover, form now clears after submission, cursor shows error message when conditions are not met, removed white space submission.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <section class="spacer">.</section>
     <section class="new-tweet">
       <h2 id="errorMessage" class="composeTitle">Compose Leaf</h2>
-      <form method="POST" action="/tweets" class="submitForm">
+      <form method="POST" action="/tweets" class="submitForm" id="formReset">
         <textarea name="text" type="text" class="tweetText" id="countstroke"
           placeholder="What are you humming about?"></textarea>
         <button class="button" style="vertical-align:middle" type="submit" value="Tweet"><span>Send </span></button>
